Mirror and EdgeSplit - Grab Vertex (Incorrect result) #26316

Closed
opened 2011-03-04 10:36:32 +01:00 by Jędrzej Slewczuk · 5 comments

%%%Way to reproduce: Open .blend file and follow instruction from video 'Mirror_EdgeSplit_Grab_crash_[JS].mov'.

I noticed that after delete Mirror modifier it doesn't crash anymore.

This it also crash Blender v2.49b.%%%

%%%Way to reproduce: Open .blend file and follow instruction from video 'Mirror_EdgeSplit_Grab_crash_[JS].mov'. I noticed that after delete Mirror modifier it doesn't crash anymore. This it also crash Blender v2.49b.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I forgot to write: tested on trunk r35339.%%%

%%%I forgot to write: tested on trunk r35339.%%%

%%%This problem is caused by:
count_bridge_verts() & split_bridge_verts() are supposed to work in the same way.

count_bridge_verts is used to detect how many verts to allocate, but it looks like one of the earlier splits changes the mesh so that split_bridge_verts() splits off a single vert where it was not detected before.

Because of this, too few verts are allocated and it crashes.

For now I have stopped the crash r35360.
but this means the face vert is not split when it should be.

Attaches a simple version of this bug.

Assigning to Ben Batt.%%%

%%%This problem is caused by: count_bridge_verts() & split_bridge_verts() are supposed to work in the same way. count_bridge_verts is used to detect how many verts to allocate, but it looks like one of the earlier splits changes the mesh so that split_bridge_verts() splits off a single vert where it was not detected before. Because of this, too few verts are allocated and it crashes. For now I have stopped the crash r35360. but this means the face vert is not split when it should be. Attaches a simple version of this bug. Assigning to Ben Batt.%%%

%%%setting as close/todo since at least crash is resolved.%%%

%%%setting as close/todo since at least crash is resolved.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26316
No description provided.