workaround for crash (not an actual fix) [#26316] Mirror and EdgeSplit - Grab Vertex do crash